# check-py-38-compatibility

./: README.md  pyproject.toml  requirements.txt
compati_py38/: __init__.py  __main__.py  main.py
compatipy/: __init__.py  __main__.py  main.py
