[tool.poetry]
name = "compatipy"
version = "0.2.0a3"
description = ""
authors = ["likianta <likianta@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^0.4.2"
lk-logger = "^5.2.4"
lk-utils = "^2.3.2"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
