[tool.poetry]
name = "compatipy"
version = "0.2.3"
description = ""
authors = ["likianta <likianta@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^0.4.2"
astpretty = ""
lk-logger = "^5.3.2"
lk-utils = "^2.4.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
